@@ -141,8 +141,10 @@ DISTFILES =	.gitignore \
 	config/fibaro/fgrm222.xml \
 	config/fibaro/fgs211.xml \
 	config/fibaro/fgs212.xml \
+	config/fibaro/fgs213.xml \
 	config/fibaro/fgs221.xml \
 	config/fibaro/fgs222.xml \
+	config/fibaro/fgs223.xml \
 	config/fibaro/fgsd002.xml \
 	config/fibaro/fgss101.xml \
 	config/fibaro/fgwpe.xml \
