@@ -95,6 +95,7 @@ Version 1.5
  - Pull Request #969 - Neo Coolcam Power Plug from LouiS22 (Nechry)
  - Add Fibaro FGPB101 Button (Nechry)
  - Pull Request #970 - Neo CoolCam Door/Window Detector from LouiS22 (Nechry)
+ - Add Fibaro fgs213 and 223 from sarakha63 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
